--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <nav>
         <a href="">Estação Hack</a>
-        <a href=""></a>
+        <a href="">Facebook</a>
+        <a href="">Mastertech</a>
     </nav>
 </body>
 </html>
